namespaces/monitoring/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-tls-route
  namespace: monitoring
spec:
  parentRefs:
    - name: jarrett-net
      namespace: gateway
  hostnames:
    - grafana.j5t.io
  rules:
    - backendRefs:
        - name: grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-tls-route
  namespace: monitoring
spec:
  parentRefs:
    - name: jarrett-net
      namespace: gateway
  hostnames:
    - victoria.j5t.io
  rules:
    - backendRefs:
        - name: victoria-metrics-cluster-vmselect
          port: 8481
